--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.13.2",
     "echarts": "^6.0.0",
-    "vue": "^3.5.24",
-    "element-plus": "^2.4.0",
-    "axios": "^1.6.0"
+    "element-plus": "^2.13.1",
+    "vue": "^3.5.24"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
