--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
-    "axios": "^1.13.2",
+    "axios": "^1.7.2",
     "echarts": "^6.0.0",
     "element-plus": "^2.13.1",
-    "vue": "^3.5.24"
+    "vue": "^3.4.0",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.2.4"
+    "vite": "^7.3.1"
   }
 }
