--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "echarts": "^6.0.0",
     "element-plus": "^2.13.1",
+    "html2canvas": "^1.4.1",
     "markdown-it": "^14.1.0",
     "vue": "^3.4.0",
     "vue-router": "^4.3.0"
